--- a/JDBC_Demo/.classpath
+++ b/JDBC_Demo/.classpath
@@ -6,15 +6,23 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/jdbc/ojdbc8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/jdbc/ojdbc8_g.jar"/>
-	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/jdbc/ojdbc8dms.jar"/>
-	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/jdbc/ojdbc8dms_g.jar"/>
-	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/jdbc/ojdbc11.jar"/>
-	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/jdbc/ojdbc11_g.jar"/>
-	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/jdbc/ojdbc11dms.jar"/>
-	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/jdbc/ojdbc11dms_g.jar"/>
-	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/jdbc/rsi.jar"/>
-	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/jdbc/simplefan.jar"/>
+	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/ojdbc11-full/ojdbc11-full/dms.jar"/>
+	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/ojdbc11-full/ojdbc11-full/ojdbc11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/ojdbc11-full/ojdbc11-full/ojdbc11_g.jar"/>
+	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/ojdbc11-full/ojdbc11-full/ojdbc11dms.jar"/>
+	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/ojdbc11-full/ojdbc11-full/ojdbc11dms_g.jar"/>
+	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/ojdbc11-full/ojdbc11-full/ons.jar"/>
+	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/ojdbc11-full/ojdbc11-full/oraclepki.jar"/>
+	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/ojdbc11-full/ojdbc11-full/orai18n.jar"/>
+	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/ojdbc11-full/ojdbc11-full/org.apache.servicemix.bundles.commons-dbcp-1.4_3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/ojdbc11-full/ojdbc11-full/osdt_cert.jar"/>
+	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/ojdbc11-full/ojdbc11-full/osdt_core.jar"/>
+	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/ojdbc11-full/ojdbc11-full/rsi.jar"/>
+	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/ojdbc11-full/ojdbc11-full/simplefan.jar"/>
+	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/ojdbc11-full/ojdbc11-full/ucp11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/ojdbc11-full/ojdbc11-full/xdb.jar"/>
+	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/ojdbc11-full/ojdbc11-full/xmlparserv2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/ojdbc11-full/ojdbc11-full/xmlparserv2_sans_jaxp_services.jar"/>
+	<classpathentry kind="lib" path="C:/Users/RAJARSHID/Downloads/jdbc-oracle.jar/jdbc-oracle.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
